# C2_imugs2

./: .gitignore  README.md  docker-compose.legacy-ros.yml  docker-compose.yml  pyproject.toml
docker/: Dockerfile
docs/: ARCHITECTURE.md  LEGACY_ROS_MISSION_FLOW_DIAGRAM.md  ROS_COMPATIBILITY_ICD.md  UI_BACKEND_LEGACY_ADAPTER.md  UI_SIMULATION_INTERFACE.md
fixtures/: agents.json  map_features.json
fixtures/mission_examples/: parade_coverage_themis.json  simple_navigation_themis.json
fixtures/missions/: simple_navigation.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  ContractExplorer.tsx  MapView.tsx  ScenarioLab.tsx  api.ts  main.tsx  mission.ts  types.ts
frontend/src/components/ui/: badge.tsx  button.tsx  tabs.tsx  textarea.tsx
frontend/src/data/: demo.ts
frontend/src/styles/: globals.css
legacy_ros/: .env.ros  README.md
legacy_ros/config/: config_agent-tasks-supervisor.yaml  config_autonomy.yaml  config_planner.yaml  launch_edge_with_autonomy_sim.sh
legacy_ros/config/data/map/geojson_examples/: roads.geojson
legacy_ros/docker/: Dockerfile.c2_ros  Dockerfile.centralized  Dockerfile.edge  Dockerfile.planner  entrypoint-c2-ros.sh  entrypoint-centralized.sh  entrypoint-edge.sh
legacy_ros/edge/agent-tasks-supervisor/: .gitlab-ci.yml  .gitmodules  ros_entrypoint.sh
legacy_ros/edge/agent-tasks-supervisor/.config/: install-dependencies.sh
legacy_ros/edge/agent-tasks-supervisor/docker-compose-dir/multiple-agents-sim-with-autonomy/: autonomy_config.yaml  launch_agent_tasks_supervisor.sh  (+2 more)
legacy_ros/edge/agent-tasks-supervisor/ros2ws/src/agent_tasks_supervisor/: CMakeLists.txt  bridge_mapping_rules.yaml  package.xml
legacy_ros/edge/agent-tasks-supervisor/ros2ws/src/agent_tasks_supervisor/include/agent_tasks_supervisor/test/: test_autonomy.hpp
legacy_ros/edge/agent-tasks-supervisor/ros2ws/src/agent_tasks_supervisor/include/custom_libraries/: geo_computation.hpp  uuid_library.hpp
legacy_ros/edge/agent-tasks-supervisor/ros2ws/src/agent_tasks_supervisor/src/: agent_tasks_supervisor_node.cpp
legacy_ros/edge/agent-tasks-supervisor/ros2ws/src/agent_tasks_supervisor/src/test/: test_autonomy.cpp
legacy_ros/edge/agent-tasks-supervisor/ros2ws/src/agent_tasks_supervisor/src/test/json_example/: planning_result.json
legacy_ros/fog/centralized-coordination/: .gitignore  .gitlab-ci.yml  .gitmodules  ros2_entrypoint.sh
legacy_ros/fog/centralized-coordination/.config/: install-dependencies.sh
legacy_ros/fog/centralized-coordination/launch/: launch_c2_sim.sh  launch_swarm_manager.sh
legacy_ros/fog/centralized-coordination/src/centralized_coordination/: CMakeLists.txt  package.xml
legacy_ros/fog/centralized-coordination/src/centralized_coordination/include/centralized_coordination/: fleet_manager_header.hpp  models.hpp  orchestrator_header.hpp  tools.hpp
legacy_ros/fog/centralized-coordination/src/centralized_coordination/include/centralized_coordination/test/: test_c2.hpp  test_planner.hpp
legacy_ros/fog/centralized-coordination/src/centralized_coordination/include/custom_libraries/: mongodb_handler.hpp
legacy_ros/fog/centralized-coordination/src/centralized_coordination/launch/: simulation_nodes.launch.py
legacy_ros/fog/centralized-coordination/src/centralized_coordination/test/: test_c2.cpp  test_planner.cpp
legacy_ros/fog/centralized-coordination/src/message_packages/autonomy_msgs/.devcontainer/: CMakeLists.txt  devcontainer.json
legacy_ros/fog/centralized-coordination/src/message_packages/autonomy_msgs/.devcontainer/json/tasks/: DriveConfig.hpp
legacy_ros/fog/centralized-coordination/src/message_packages/autonomy_msgs/.devcontainer/msg/: Localization.msg  MissionData.msg  SwarmingTrajectory.msg  VehicleInfo.msg
legacy_ros/fog/centralized-coordination/src/message_packages/environment_msgs/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
legacy_ros/fog/centralized-coordination/src/message_packages/environment_msgs/msg/: EnvironmentDataGetVersionResponse.msg  EnvironmentDataResetRequest.msg  EnvironmentDataUploadRequest.msg  EnvironmentDataUploadResponse.msg
legacy_ros/fog/centralized-coordination/src/message_packages/environment_msgs/srv/: EnvironmentDataGetVersion.srv  EnvironmentDataReset.srv  EnvironmentDataUpload.srv
legacy_ros/fog/command-control/: install_ros_dependencies.sh
legacy_ros/fog/command-control/src/backend/ros2-rest-api/ros2_ws/src/c2_ros2_rest_api/: CMakeLists.txt  package.xml
legacy_ros/fog/command-control/src/backend/ros2-rest-api/ros2_ws/src/c2_ros2_rest_api/include/c2_ros2_rest_api/: c2_rest.hpp  models.hpp  tools.hpp
legacy_ros/fog/command-control/src/backend/ros2-rest-api/ros2_ws/src/c2_ros2_rest_api/include/custom_libraries/: json_parser.hpp  uuid_library.hpp
legacy_ros/fog/command-control/src/backend/ros2-rest-api/ros2_ws/src/c2_ros2_rest_api/launch/: simulation_nodes.launch.py
legacy_ros/fog/command-control/src/backend/ros2-rest-api/ros2_ws/src/c2_ros2_rest_api/src/: c2_rest.cpp
legacy_ros/fog/planner/: .gitignore  .gitmodules  ros2_entrypoint.sh
legacy_ros/fog/planner/.config/: install_dependencies.sh
new_codebase_legacy_context_bundle/: MANIFEST.md  TREE.txt  copied_files.txt  missing_files.txt
new_codebase_legacy_context_bundle/legacy_files/: README.md
new_codebase_legacy_context_bundle/legacy_files/docker-compose-dir/Single-Robotnik-Full-Stack/: config_planner.yaml  docker-compose.yaml
new_codebase_legacy_context_bundle/legacy_files/docs/: NEW_AGENT_PROMPT_OLD_SYSTEM_CONTEXT.md
schemas/: agent_profile.schema.json  map_feature.schema.json  mission_config.schema.json  task_plan.schema.json
scripts/: check_legacy_ros_stack.sh  reset_legacy_examples.sh
src/c2_imugs2/: __init__.py  api.py  cli.py  contracts.py  domain.py  geometry.py  legacy_map.py  legacy_rest.py  mission_config.py  mission_service.py  planner.py  planner_adapters.py  ports.py  repositories.py  rosbridge.py  task_plan.py
src/c2_imugs2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_core.py
(+240 files in other folders)
