<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>centralized_coordination</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="emile.leflecher.rma@gmail.com">emile</maintainer>
  <maintainer email="alexandre.lagrappe@mil.be">emile</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- custom messages -->
  <depend>c2_msgs</depend>
  <depend>centralized_msgs</depend>
  <depend>environment_msgs</depend>
  <depend>task_msgs</depend>

  <depend>mongocxx</depend>
  <depend>bsoncxx</depend>
  <depend>nlohmann_json</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
